--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "@shopify/flash-list": "^1.7.1",
+    "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "react": "18.3.1",
-    "react-native": "0.75.2"
+    "react-native": "0.75.2",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-mmkv": "^3.0.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-svg": "^15.6.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-uuid": "^2.0.2",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
